<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="io.ranjanashish.android.myappportfolio.MainActivity"
    android:background="#e0ecf0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#303f88" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app1"
        android:id="@+id/button"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app2"
        android:id="@+id/button2"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app3"
        android:id="@+id/button3"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app5"
        android:id="@+id/button5"
        android:layout_below="@id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app6"
        android:id="@+id/button6"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#cc0d50"
        android:textColor="#ffffff" />
</RelativeLayout>
